--- a/src/main/resources/templates/post/posts.html
+++ b/src/main/resources/templates/post/posts.html
@@ -17,7 +17,7 @@
         <div class="col">
             <button class="btn btn-primary float-end"
                     onclick="location.href='addPost.html'"
-                    th:onclick="|location.href='@{/post/addPost}'|"
+                    th:onclick="|location.href='@{/posts/addPost}'|"
                     type="button" th:text="#{page.addPost}">게시글 등록</button>
         </div>
     </div>
