--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -37,7 +37,7 @@
     <hr class="my-4">
 
     <div class="row">
-        <div class="col">
+        <div class="col" th:if="${loginUser}=='login'">
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editPost.html'"
                     th:onclick="|location.href='@{/posts/{post_index}/edit(post_index=${post.id})}'|"
