--- a/src/main/resources/templates/post/addPost.html
+++ b/src/main/resources/templates/post/addPost.html
@@ -44,7 +44,7 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='post.html'"
-                        th:onclick="|location.href='@{/post}'|"
+                        th:onclick="|location.href='@{/posts}'|"
                         type="button" th:text="#{button.cancel}">취소</button>
             </div>
         </div>
