--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -26,28 +26,38 @@
         <input type="text" id="postId" name="postId" class="form-control" value="1" th:value="${post.id}" readonly>
     </div>
     <div>
+        <label for="postWriter" th:text="#{label.post.writer}">작성자</label>
+        <input type="text" id="postWriter" name="postWriter" class="form-control" value="작성자" th:value="${post.writer}" readonly>
+    </div>
+    <div>
         <label for="postTitle" th:text="#{label.post.title}">게시글 제목</label>
         <input type="text" id="postTitle" name="postTitle" class="form-control" value="제목" th:value="${post.title}" readonly>
     </div>
     <div>
-        <label for="postContent" th:text="#{label.post.content}">가격</label>
+        <label for="postContent" th:text="#{label.post.content}">게시글 내용</label>
         <input type="text" id="postContent" name="postContent" class="form-control" value="내용" th:value="${post.content}" readonly>
     </div>
 
     <hr class="my-4">
 
     <div class="row">
+        <div class="col">
+            <button class="w-100 btn btn-secondary btn-lg"
+                    onclick="location.href='posts.html'"
+                    th:onclick="|location.href='@{/posts}'|"
+                    type="button" th:text="#{button.list}">목록으로</button>
+        </div>
         <div class="col" th:if="${loginUser}=='login'">
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editPost.html'"
                     th:onclick="|location.href='@{/posts/{post_index}/edit(post_index=${post.id})}'|"
                     type="button" th:text="#{page.updatePost}">게시글 수정</button>
         </div>
-        <div class="col">
-            <button class="w-100 btn btn-secondary btn-lg"
+        <div class="col" th:if="${loginUser}=='login'">
+            <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='posts.html'"
-                    th:onclick="|location.href='@{/posts}'|"
-                    type="button" th:text="#{button.list}">목록으로</button>
+                    th:onclick="|location.href='@{/posts/{post_index}/delete(post_index=${post.id})}'|"
+                    type="button" th:text="#{page.delete}">게시글 삭제</button>
         </div>
     </div>
 
