--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -29,6 +29,14 @@
         </div>
     </div>
     <hr class="my-4">
+    <div class="row">
+        <div class="col">
+            <button class="w-100 btn btn-secondary btn-lg" type="button"
+                    th:onclick="|location.href='@{/user/delete}'|">
+                회원탈퇴
+            </button>
+        </div>
+    </div>
 </div> <!-- /container -->
 </body>
 </html>
