--- a/src/main/resources/templates/user/findPassForm.html
+++ b/src/main/resources/templates/user/findPassForm.html
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
     <div class="py-5 text-center">
-        <h2>아이디 찾기</h2>
+        <h2>비밀번호 찾기</h2>
     </div>
     <h4 class="mb-3">회원 정보 입력</h4>
     <form action="" th:action th:object="${user}" method="post">
@@ -26,8 +26,20 @@
             <input type="text" id="userEmail" th:field="*{userEmail}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{userEmail}" />
         </div>
-        <button class="w-100 btn btn-primary btn-lg" type="submit">아이디 찾기</button>
+        <div>
+            <label for="userId">아이디를 입력해주세요.</label>
+            <input type="text" id="userId" th:field="*{userId}" class="form-control" th:errorclass="field-error">
+            <div class="field-error" th:errors="*{userId}" />
+        </div>
+        <button class="w-100 btn btn-primary btn-lg" type="submit">비밀번호 찾기</button>
     </form>
+    <div class="col">
+        <button class="w-100 btn btn-dark btn-lg"
+                onclick="location.href='loginForm.html'"
+                th:onclick="|location.href='@{/login}'|" type="button">
+            로그인
+        </button>
+    </div>
 </div> <!-- /container -->
 </body>
 </html>
