--- a/src/main/resources/templates/user/userPw.html
+++ b/src/main/resources/templates/user/userPw.html
@@ -17,14 +17,10 @@
 <body>
 <div class="container">
     <div class="py-5 text-center">
-        <h2>아이디/비밀번호 찾기</h2>
+        <h2>비밀번호 찾기</h2>
     </div>
 
-    <div class="col" th:if="${checkId}=='yes'">
-        <label for="userId">아이디</label>
-        <input type="text" id="userId" name="userId" class="form-control" value="userId" th:value="${userId}" readonly>
-    </div>
-    <div class="col" th:if="${checkPw}=='yes'">
+    <div class="col">
         <label for="userPw">비밀번호</label>
         <input type="text" id="userPw" name="userPw" class="form-control" value="userPw" th:value="${userPw}" readonly>
     </div>
